doc(sql): aggregation function: Part 2
补全了这一节的题解，但是详细的复盘和知识点复习还没补充，题单也没录上，标题也没贴，下次补上

--- a/数据库/03.聚合函数.md
+++ b/数据库/03.聚合函数.md
@@ -50,3 +50,104 @@ group by p.product_id
    - 还是忽略了表描述中的`(product_id，start_date，end_date) 是 prices 表的主键（具有唯一值的列的组合）。`
    - 巧的是我问 AI，AI 也是用 UnitsSold 表连接 Prices 表，所以也会出现漏数据的情况
    - 感觉主要是题目太绕了，而且挖坑恶心人 </aside>
+
+
+
+```sql
+select 
+    p.project_id,
+    ifnull(round((sum(e.experience_years) / count(p.project_id)), 2), 0.00) as average_years
+from Project p
+left join Employee e on p.employee_id = e.employee_id
+group by project_id
+```
+
+
+
+```sql
+select 
+    r.contest_id,
+    ifnull(
+        round(
+            ((count(r.user_id) / (select count(*) from Users)) * 100), 2
+        ), 0.00
+    ) as percentage
+from Register r
+left join Users u on r.user_id = u.user_id
+group by r.contest_id
+order by percentage desc, r.contest_id
+```
+
+ifnull PTSD 给我折磨透了
+
+我能想到直接除以Users表的总数，但是能否在查询语句中写一个语句我就不太确定，试一下还是可以的
+
+
+
+```sql
+select
+    query_name,
+    ifnull(round(avg(rating/position), 2), 0.00) as quality,
+    ifnull(round(avg(rating < 3) * 100, 2), 0.00) as poor_query_percentage
+from Queries
+group by query_name
+```
+
+
+
+```sql
+select
+    date_format(trans_date, "%Y-%m") as month,
+    country,
+    count(state) as trans_count,
+    sum(if(state="approved", 1, 0)) as approved_count,
+    sum(amount) as trans_total_amount,
+    sum(if(state="approved", amount, 0)) as approved_total_amount
+from Transactions
+group by month, country
+```
+
+
+
+```sql
+select
+    round(
+        (sum(order_date=customer_pref_delivery_date) / count(*)) * 100, 2
+    ) as immediate_percentage
+from Delivery
+where (customer_id, order_date) in (
+    select customer_id, min(order_date) as order_date
+    from Delivery
+    group by customer_id
+)
+```
+
+思路：
+
+1. 找到最早的订单，作为子表
+2. 根据子表，判断一下即时订单，然后除以总数，则知道了即时订单率
+
+
+
+这题不会，抄的（加了个 ifnull）
+
+```sql
+select 
+    ifnull(
+        round(
+           count(distinct player_id) / (select count(distinct player_id) from Activity) , 2
+        ), 0.00
+    ) as fraction
+from Activity
+where (player_id, event_date) in (
+    select player_id, min(event_date) + interval 1 day
+    from Activity
+    group by player_id
+)
+```
+
+<aside> 💡
+
+1. 有相同的想法，类似与上一题，但是不知道怎么求首次登录下一天是否还登陆
+   1. 用了一个 interval 1 day，这个用法我不懂，学到了
+2. count 的时候用了 distinct，我自己很少加这个，我看到很多人会加，但是有时候不加也能过用例，感觉可能也是什么 distinct ptsd，不过我觉得最好了解一下，明确什么时候该加，或者是不是和 ifnull 一样加上有好处 </aside>
