doc(pointer): 分离双指针题解

--- a/双指针/双指针.md
+++ b/双指针/双指针.md
@@ -392,3 +392,124 @@ func sortColors(nums []int)  {
   - 首先通过 `nums[i], nums[right] = nums[right], nums[i]` 交换 `nums[i]` 和 `nums[right]` 的值。这么做的目的是把当前遇到的 `2` 元素交换到切片靠后的位置（也就是 `right` 指针所指向的位置）
   - `right--` 来标记下一个可以放置 `2` 元素的位置
   - `i` 指针不需要马上后移（因为交换过来的元素还没检查，可能是 `0` 或者 `1`，需要再次判断）
+
+# 分离双指针
+
+分离双指针，指的是在两个数组中分别使用两个指针同时遍历完成任务
+
+## 题单
+
+[392. 判断子序列](https://leetcode.cn/problems/is-subsequence/)
+
+[350. 两个数组的交集 II](https://leetcode.cn/problems/intersection-of-two-arrays-ii/)
+
+[415. 字符串相加](https://leetcode.cn/problems/add-strings/)
+
+## [392. 判断子序列](https://leetcode.cn/problems/is-subsequence/)
+
+```go
+func isSubsequence(s string, t string) bool {
+    if len(s) == 0 {
+        return true
+    }
+
+    var p1 int
+    for p2 := 0; p2 < len(t); p2++ {
+        if t[p2] == s[p1] {
+            p1++
+        }
+
+        if p1 == len(s) {
+            return true
+        }
+    }
+    return false
+}
+```
+
+<aside> 💡
+
+有一次提交错误，没有考虑到空字符串的情况，少了最前面的一部分判断。测试用例还是全一点，多考虑一些，比如
+
+- 子串和原字符串一样
+- 原字符串中多次出现子串，或者相同元素在原字符串中（连续）多次出现
+- 空串
+- 常规情况
+  - 子串在起始位置
+  - 子串在中间
+  - 子串在尾部
+
+虽然我考虑了大部分情况，测试用例发现了自己没有在匹配完毕后及时退出导致越界。但是忽略了空字符串，所以有一次提交错误
+
+</aside>
+
+因为这个空串的问题，我写了一个边界条件判断，所以我想有没有不需要这个边界条件的优化呢？（性能几乎没差别，看到时候能想到哪个写哪个呗，不用纠结）
+
+```go
+func isSubsequence(s string, t string) bool {
+    i, j := 0, 0
+    for i < len(s) && j < len(t) {
+        if s[i] == t[j] {
+            i++
+        }
+        j++
+    }
+    return i == len(s)
+}
+```
+
+## [350. 两个数组的交集 II](https://leetcode.cn/problems/intersection-of-two-arrays-ii/)
+
+```sql
+func intersect(nums1 []int, nums2 []int) []int {
+    slices.Sort(nums1)
+    slices.Sort(nums2)
+    
+    n1, n2 := len(nums1), len(nums2)
+    var (
+        p1, p2 int
+        res []int
+    )
+
+    for p1 < n1 && p2 < n2 {
+        if nums1[p1] == nums2[p2] {
+            res = append(res, nums1[p1])
+            p1++
+            p2++
+        } else if nums1[p1] < nums2[p2]{
+            p1++
+        } else {
+            p2++
+        }
+    }
+
+    return res
+}
+```
+
+## [415. 字符串相加](https://leetcode.cn/problems/add-strings/)
+
+```sql
+func addStrings(num1 string, num2 string) string {
+    var (
+        carry int
+        res string
+    )
+
+    for p1, p2 := len(num1)-1, len(num2)-1; p1 >= 0 || p2 >= 0 || carry != 0; p1, p2 = p1-1, p2-1 {
+        var i, j int
+        if p1 >= 0 {
+            i = int(num1[p1] - '0')
+        }
+        if p2 >= 0 {
+            j = int(num2[p2] - '0')
+        }
+    
+        sub := i + j + carry
+        res = strconv.Itoa(sub % 10) + res
+        carry = sub / 10
+    }
+    
+    return res
+}
+```
